# blinds-controller

./: .gitignore  CMakeLists.txt  README.md  partitions.csv  sdkconfig  sdkconfig.old
docs/: Blinds Controller.drawio  TestBook.xlsx
main/: CMakeLists.txt  Kconfig  app_events.c  app_events.h  blinds.c  blinds.h  buttons.c  buttons.h  idf_component.yml  main.c  mcu.c  mcu.h  motors.c  motors.h  zigbee.c  zigbee.h  zigbee_ota.c  zigbee_ota.h
main/zcl_utility/include/: zcl_utility.h
main/zcl_utility/src/: zcl_utility.c
